themes/bcom-starter/scss/f-components/_nav-site.scss
/*
 * Style for the nav menus
 *
 */

// PRIMARY NAVIGATION MENU
// Courtesy http://line25.com/tutorials/how-to-create-a-pure-css-dropdown-menu

// before we begin, hide the submenus
nav ul ul {
    display: none;
}

nav ul li:hover > ul {
    display: block;
}

// set the styling for the nav bar
nav ul {
    background: $color-primary;
    padding: 0;
    list-style: none;
    position: relative;
    display: inline-table;

    &:after {
        content: "";
        clear: both;
        display: block;
    }
}

nav ul li {
    float: left;

    &:first-of-type {
        margin-left: 0;
    }

    &:last-of-type {
        margin-bottom: 0;
        margin-right: 0;
    }

    &:hover {
        background: $color-secondary;
    }
}

nav ul li:hover a {
    color: $white;
}

nav ul li a {
    display: block;
    color: $white;
    padding: 1rem 3rem;
    text-decoration: none;
}

// set the styling for the submenu
nav ul ul {
    background: $color-secondary;
    padding: 0;
    position: absolute;
    top: 100%;
}

nav ul ul li {
    float: none;
    border-top: 1px solid $color-primary;
    margin-left: 0;
    position: relative;

    &:last-of-type {
        border-bottom: 1px solid $color-primary;
    }
}

nav ul ul li a {
    padding: 1rem 3rem;
    color: $white;

    &:hover {
        background: darken($color-secondary, 20%);
    }
}

// set the styling for the sub-submenu
nav ul ul ul {
    position: absolute;
    left: 100%;
    top: 0;
}

